--- a/src/main/resources/cardProduct.fxml
+++ b/src/main/resources/cardProduct.fxml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane fx:id="cardProductAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="130.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CardProductController">
+<AnchorPane fx:id="cardProductAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="130.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CardProductController">
    <children>
-      <VBox prefHeight="199.0" prefWidth="130.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutX="12.0" prefHeight="230.0" prefWidth="106.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="147.0" prefWidth="130.0">
                <children>
-                  <ImageView fx:id="ImageView_product" fitHeight="147.0" fitWidth="130.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="ImageView_product" fitHeight="149.0" fitWidth="117.0" layoutX="-6.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
             <Label fx:id="productNameLabel" alignment="CENTER" prefHeight="18.0" prefWidth="131.0" text="productName" />
             <Label fx:id="productPriceLabel" alignment="CENTER" prefHeight="18.0" prefWidth="130.0" text="productPrice" />
-            <Button fx:id="AddToCartButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="141.0" text="Add to Cart" />
+            <Button fx:id="AddToCartButton" alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="134.0" text="Add to Cart" textAlignment="CENTER" />
          </children>
       </VBox>
    </children>
