--- a/src/main/resources/homepage-form.fxml
+++ b/src/main/resources/homepage-form.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="homepageform" prefHeight="420.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.HomePageController">
+<AnchorPane fx:id="homepageform" prefHeight="420.0" prefWidth="719.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.HomePageController">
    <children>
       <ImageView fitHeight="556.0" fitWidth="807.0" layoutX="-80.0" layoutY="-62.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -39,6 +36,7 @@
             <Image url="@mascara.jpg" />
          </image>
       </ImageView>
-      <Button fx:id="logoutButton" layoutX="14.0" layoutY="25.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" text="Logout" onAction="#onLogoutButtonClick"/>
+      <Button fx:id="logoutButton" layoutX="36.0" layoutY="25.0" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="31.0" prefWidth="79.0" text="Logout" />
+      <Button fx:id="ordersButton" layoutX="612.0" layoutY="25.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="79.0" text="Orders" onAction="#onOrdersButtonClick" />
    </children>
 </AnchorPane>
