--- a/src/main/resources/cart-form.fxml
+++ b/src/main/resources/cart-form.fxml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CartController">
+<AnchorPane prefHeight="453.0" prefWidth="713.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.onlinestore.controllers.CartController">
    <children>
       <ImageView fx:id="totalPrice" fitHeight="476.0" fitWidth="733.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -31,7 +36,7 @@
           <TableColumn fx:id="Price_col" minWidth="0.0" prefWidth="128.0" text="Price" />
         </columns>
       </TableView>
-      <Label fx:id="total_Price" layoutX="176.0" layoutY="367.0" prefHeight="44.0" prefWidth="69.0" text="Label" textFill="#3e0648">
+      <Label fx:id="total_Price" layoutX="176.0" layoutY="367.0" prefHeight="44.0" prefWidth="165.0" text="Label" textFill="#3e0648">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
